<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Second Sense</string>
    <string name="action_settings">Settings</string>
    <string name="cont">CONTINUE</string>
    <string name="welc">Welcome to Second Sense!</string>
    <string name="track">Track user movements using the sensors on your Android device.</string>
    <string name="max">For maximum performance, hold the mobile device in your hand with the screen
         facing you, facing up at the sky, or in your front pocket with the screen facing you.</string>
    <string name="all">All files are saved to</string>
    <string name="sd">/sdcard/SecondSense/</string>
    <string name="clik">Click icon on the top right to name the file before recording</string>
    <string name="acc">Accelerometer</string>
    <string name="gyro">Gyroscope</string>
    <string name="ped">Pedometer</string>
    <string name="record">Record</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>

</resources>
